--- a/formação-html-css/styles/style.css
+++ b/formação-html-css/styles/style.css
@@ -41,6 +41,7 @@ body{
 .header {
     padding: 2% 0 0 10%;
 }
+
 .header_menu {
     display: flex;
     gap: 80px;
@@ -121,9 +122,22 @@ font-size: 16px;
 
 
 @media (max-width: 890px) {
+    .header {
+        padding: 5%;
+    }
+
+    .header_menu {
+        display: flex;
+        justify-content: center;
+    }
+
     .apresentation {
         flex-direction: column-reverse;
-
     }
+
+    .apresentation_content {
+        width: 100%;
+    } 
+
 }
 
