--- a/alura-plus/style.css
+++ b/alura-plus/style.css
@@ -25,6 +25,8 @@ body {
     background-image: url("assets/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
 .container { 
@@ -33,15 +35,20 @@ body {
     grid-template-columns: 50% auto;
 }
 
+.container__box {
+    margin: 0 6rem;
+}
+
 .container___title {
     font-size: 1.75rem;
 }
 
 .container__img{
-    width: 20%;
+   margin: 1rem 0 2rem 0; 
 }
 
 .container__btn {
+    margin-bottom: 1em;
     padding: 1em;
     display: block;
     background-color: var(--blue-btn);
