--- a/formação-javascript/aluramidi-curso/css/estilos.css
+++ b/formação-javascript/aluramidi-curso/css/estilos.css
@@ -1,7 +1,7 @@
 :root {
   --cinza: #aaa;
-  --vermelha: #e93d50;
-  --vermelha-escura: #af303f;
+  --vermelha: #0038ee;
+  --vermelha-escura: #0d0c50;
   --branca: #fff;
   --luz: rgb(229, 255, 0);
 }
