--- a/formação-javascript/guess-number/style.css
+++ b/formação-javascript/guess-number/style.css
@@ -21,6 +21,10 @@ h1 {
   font-size: 4rem;  
 }
 
+h2 {
+    font-size: 5rem;
+}
+
 h3 {
     margin-top: 1rem;
     font-size: 2rem;
@@ -38,4 +42,14 @@ h3 {
     border-radius: 0.5rem;
     display: inline-block;
     font-size: 4rem;
+}
+
+.btn-play {
+    color: var(--secondary-color);
+    font-size: 2rem;
+    margin-top: 4rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 1rem;
+    cursor: pointer;
 }
