--- a/projeto-vidflow-main/css/estilos.css
+++ b/projeto-vidflow-main/css/estilos.css
@@ -150,6 +150,53 @@ body {
     transform: translateX(26px);
   }
 
+  .sidebar__lateral__container {
+    width: 40%;
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+
+  .sidebar__lateral__item {
+    width: 100%;
+    margin-left: 0;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .sidebar__lateral__h3{
+    padding-bottom: 0.5rem;
+    font-size: 1rem;
+  }
+
+  .sidebar__lateral__container img {
+    width: 24px;
+    height: auto;
+  }
+
+  #sidebar__lateral__arrow_img {
+    width: 18px;
+    height: auto;
+    padding-left: 6px;
+  }
+
+  .sidebar__lateral__content {
+    margin: 1.5rem 0;
+  }
+
+  .sidebar__lateral__content_after {
+    font-weight: 500;
+    margin-left: 1rem;
+    width: 90%;
+    border-bottom: 2px solid var(--azul-escuro);
+  }
 
 /* SECAO SUPERIOR */
 
