feat: add the logical to change the button and the image according to click

--- a/praticando-logica/alugames/css/main.css
+++ b/praticando-logica/alugames/css/main.css
@@ -88,6 +88,10 @@
     margin-bottom: 1rem;
 }
 
+.dashboard__item__img-content {
+    border-radius: .5rem;
+}
+
 .dashboard__item__img--rented {
     position: relative;
 }
